# mkts_north

./: .gitignore  DATABASE_REBUILD.md  README.md  chron_info.md  pyproject.toml  rebuild_database.py  reset_turso_database.py  sde_info.db  sdeinfo.db-info  sdeinfo.db-wal  wcfitting.db-info  wcmktnorth2.db-info  wcmktnorth2.db-wal
.github/workflows/: market-data-collection.yml
docs/: GITHUB_ACTIONS_SETUP.md  colored_logging.md
examples/: gsheets_example.py
src/mkts_backend/: __init__.py  cli.py
src/mkts_backend/config/: __init__.py  config.py  esi_config.py  gsheets_config.py  logging_config.py
src/mkts_backend/db/: db_handlers.py  db_queries.py  fit_models.py  models.py  sde_models.py
src/mkts_backend/esi/: __init__.py  async_history.py  esi_auth.py  esi_requests.py
src/mkts_backend/processing/: __init__.py  data_processing.py
src/mkts_backend/utils/: __init__.py  add2doctrines_table.py  db_utils.py  doctrine_update.py  fix_remote_doctrines.py  get_type_info.py  jita.py  nakah.py  parse_fits.py  parse_items.py  utils.py
